--- a/paperless-ui/index.html
+++ b/paperless-ui/index.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Webdesign is my passion</h1>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
+
+    <div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
+            <div class="container-fluid">
+                <a class="navbar-brand">Paperless</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/upload.html">Upload</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/documentsList.html">All Documents</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container">
+        <h1>REST Api Test</h1>
+        <input type="button" onclick="sendHelloWorldRequest()" value="SEND">
+        <p id="helloWorld"></p>
+    </div>
 </body>
 </html>
