--- a/paperless-ui/pages/upload.html
+++ b/paperless-ui/pages/upload.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
           crossorigin="anonymous"></script>
-  <script src="../js/script.js"></script>
+  <script src="../js/uploadDocument.js"></script>
 
   <div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
@@ -41,11 +41,13 @@
   <div class="container">
     <h1>Upload Document</h1>
     <div class="mb-3">
-      <label for="formFile" class="form-label">Please select your file</label>
-      <input class="form-control" type="file" id="formFile">
+      <label for="pdfFile" class="form-label">Please select your file</label>
+      <input class="form-control" type="file" id="pdfFile" accept="application/pdf" required>
       <br>
       <button class="btn btn-success" type="button" onclick="uploadDocument()">Upload</button>
     </div>
+
+    <p id="message"></p>
   </div>
 </body>
 </html>
