--- a/paperless-ui/pages/documentsList.html
+++ b/paperless-ui/pages/documentsList.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
           crossorigin="anonymous"></script>
-  <script src="../js/script.js"></script>
+  <script src="../js/documentsList.js"></script>
 
   <div>
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
@@ -42,18 +42,13 @@
     <h1>All Documents</h1>
     <table class="table">
       <thead>
-      <tr>
-        <th scope="col">Document</th>
-        <th scope="col">Created</th>
-        <th scope="col">Download</th>
-      </tr>
+        <tr>
+          <th scope="col">Document</th>
+          <th scope="col">Created (DD:MM:YYYY)</th>
+          <th scope="col">Download</th>
+        </tr>
       </thead>
-      <tbody>
-      <tr>
-        <td>Scheidungsformular</td>
-        <td>Kyo</td>
-        <td><button type="button" class="btn btn-success">Download</button></td>
-      </tr>
+      <tbody id="documents-table-body">
       </tbody>
     </table>
   </div>
