--- a/paperless-ui/index.html
+++ b/paperless-ui/index.html
@@ -2,46 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+    <title>Paperless Document Management</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
-
 <body>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center">
+            <i class="bi bi-file-earmark-text me-2"></i>
+            Paperless
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/upload.html">Upload</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/documentsList.html">All Documents</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-    <div>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
-            <div class="container-fluid">
-                <a class="navbar-brand">Paperless</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/upload.html">Upload</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/documentsList.html">All Documents</a>
-                        </li>
-                    </ul>
+<!-- Main Content -->
+<div class="container py-5">
+    <!-- Hero Section -->
+    <div class="row align-items-center mb-5">
+        <div class="col-lg-6">
+            <h1 class="display-4 fw-bold mb-3">Document Management Made Simple</h1>
+            <p class="lead text-muted mb-4">
+                Upload, organize, and search your documents with ease.
+                Our system automatically processes and indexes your files for quick retrieval.
+            </p>
+            <div class="d-grid gap-2 d-md-flex">
+                <a href="pages/upload.html" class="btn btn-primary btn-lg px-4">
+                    <i class="bi bi-upload me-2"></i>Upload Document
+                </a>
+                <a href="pages/documentsList.html" class="btn btn-outline-secondary btn-lg px-4">
+                    <i class="bi bi-files me-2"></i>View All
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Features Section -->
+    <div class="row g-4 py-5">
+        <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm card-hover">
+                <div class="card-body text-center">
+                    <div class="feature-icon mx-auto">
+                        <i class="bi bi-search"></i>
+                    </div>
+                    <h3 class="fs-4 mb-3">Full Text Search</h3>
+                    <p class="text-muted">
+                        Quickly find any document using our powerful search functionality.
+                    </p>
                 </div>
             </div>
-        </nav>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm card-hover">
+                <div class="card-body text-center">
+                    <div class="feature-icon mx-auto">
+                        <i class="bi bi-file-text"></i>
+                    </div>
+                    <h3 class="fs-4 mb-3">OCR Processing</h3>
+                    <p class="text-muted">
+                        Automatically extract text from your PDF documents.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card h-100 border-0 shadow-sm card-hover">
+                <div class="card-body text-center">
+                    <div class="feature-icon mx-auto">
+                        <i class="bi bi-cloud"></i>
+                    </div>
+                    <h3 class="fs-4 mb-3">Secure Storage</h3>
+                    <p class="text-muted">
+                        Your documents are safely stored and easily accessible.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="container">
-        <h1>REST Api Test</h1>
-        <input type="button" onclick="sendHelloWorldRequest()" value="SEND">
-        <p id="helloWorld"></p>
-    </div>
+</div>
+
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
