--- a/paperless-ui/pages/documentsList.html
+++ b/paperless-ui/pages/documentsList.html
@@ -1,56 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>All documents</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-        crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Documents List - Paperless</title>
+    <!-- External CSS Dependencies -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <!-- Custom Styles - Using absolute path -->
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
-  <script src="../js/documentsList.js"></script>
-
-  <div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
-      <div class="container-fluid">
-        <a class="navbar-brand">Paperless</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="/">
+            <i class="bi bi-file-earmark-text me-2"></i>
+            Paperless
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="upload.html">Upload</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">All Documents</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/upload.html">Upload</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/pages/documentsList.html">All Documents</a>
+                </li>
+            </ul>
         </div>
-      </div>
-    </nav>
-  </div>
+    </div>
+</nav>
 
-  <div class="container">
-    <h1>All Documents</h1>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Document</th>
-          <th scope="col">Created (DD:MM:YYYY)</th>
-          <th scope="col">Download</th>
-        </tr>
-      </thead>
-      <tbody id="documents-table-body">
-      </tbody>
-    </table>
-  </div>
+<!-- Main Content Container -->
+<div class="container py-5">
+    <!-- Search Section -->
+    <div class="search-container">
+        <div class="input-group">
+            <input type="search" id="search-input" class="form-control"
+                   placeholder="Search documents..." aria-label="Search documents">
+            <button class="btn btn-primary" type="button" id="search-button">
+                <i class="bi bi-search"></i>
+            </button>
+        </div>
+    </div>
+
+    <!-- Documents Table Container -->
+    <div class="table-container mt-4">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Filename</th>
+                <th>Size</th>
+                <th>Type</th>
+                <th>Upload Date</th>
+                <th>OCR Status</th>
+                <th>Actions</th>
+            </tr>
+            </thead>
+            <tbody id="documents-table-body">
+            <!-- Dynamic content will be inserted here via JavaScript -->
+            </tbody>
+        </table>
+
+        <!-- Empty State Display -->
+        <div id="empty-state" class="empty-state d-none text-center py-5">
+            <i class="bi bi-file-earmark-text empty-state-icon fs-1 text-muted mb-3"></i>
+            <h4>No Documents Found</h4>
+            <p class="text-muted">Upload some documents to get started</p>
+            <a href="/pages/upload.html" class="btn btn-primary">
+                <i class="bi bi-upload me-2"></i>Upload Document
+            </a>
+        </div>
+    </div>
+</div>
+
+<!-- Loading Spinner Overlay -->
+<div class="loader-overlay" id="loader">
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+
+<!-- JavaScript Dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/documentsList.js"></script>
 </body>
 </html>
