--- a/paperless-ui/pages/upload.html
+++ b/paperless-ui/pages/upload.html
@@ -2,52 +2,82 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Upload</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+    <title>Upload Document - Paperless</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-          crossorigin="anonymous"></script>
-  <script src="../js/uploadDocument.js"></script>
-
-  <div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="light">
-      <div class="container-fluid">
-        <a class="navbar-brand">Paperless</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" href="../index.html">
+            <i class="bi bi-file-earmark-text me-2"></i>
+            Paperless
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Upload</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="documentsList.html">All Documents</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="">Upload</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/pages/documentsList.html">All Documents</a>
+                </li>
+            </ul>
         </div>
-      </div>
-    </nav>
-  </div>
-
-  <div class="container">
-    <h1>Upload Document</h1>
-    <div class="mb-3">
-      <label for="pdfFile" class="form-label">Please select your file</label>
-      <input class="form-control" type="file" id="pdfFile" accept="application/pdf" required>
-      <br>
-      <button class="btn btn-success" type="button" onclick="uploadDocument()">Upload</button>
     </div>
+</nav>
 
-    <p id="message"></p>
-  </div>
+<!-- Main Content -->
+<div class="container py-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <h2 class="card-title text-center mb-4">Upload Document</h2>
+                    <div class="upload-area mb-4" onclick="document.getElementById('pdfFile').click()">
+                        <i class="bi bi-cloud-upload upload-icon"></i>
+                        <h5>Drag and drop your PDF here</h5>
+                        <p class="text-muted">or click to browse files</p>
+                        <input class="d-none" type="file" id="pdfFile" accept="application/pdf">
+                    </div>
+                    <div class="progress mb-3 d-none" id="progressBar">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated"
+                             id="uploadProgress" role="progressbar"></div>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-primary btn-lg px-5"
+                                type="button" onclick="uploadDocument()">
+                            <i class="bi bi-upload me-2"></i>Upload
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Toast Notifications -->
+<div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+    <div id="uploadToast" class="toast" role="alert">
+        <div class="toast-header">
+            <i class="bi bi-info-circle me-2"></i>
+            <strong class="me-auto">Upload Status</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast"></button>
+        </div>
+        <div class="toast-body" id="toastMessage"></div>
+    </div>
+</div>
+
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/js/upload.js"></script>
 </body>
 </html>
